--- a/capitulos/desarrolloMetodologico/caracterizacionGRID.tex
+++ b/capitulos/desarrolloMetodologico/caracterizacionGRID.tex
@@ -88,7 +88,7 @@ En el siguiente formato se van a especificar las características técnicas de l
 El \GRID\ ofrece una variedad de servicios tecnológicos a la comunidad académica, especialmente a los estudiantes de Ingeniería de Sistemas y Computación. Estos servicios incluyen:
 
 \subsection{Servicios actuales}
-Los servicios actuales del GRID se centran en la provisión de infraestructura de \TI\, incluyendo máquinas virtuales, almacenamiento y redes. Estos servicios son utilizados principalmente por estudiantes y docentes, los cuales se especifican en el cuadro~\ref{tab:servicios}
+Los servicios actuales del GRID se centran en la provisión de infraestructura de \TI\, incluyendo máquinas virtuales, almacenamiento y redes. Estos servicios son utilizados principalmente por estudiantes y docentes, los cuales se especifican en el cuadro~\ref{tab:servicios}.
 
 \begin{table}[H]
 \centering
@@ -115,11 +115,9 @@ Los servicios actuales del GRID se centran en la provisión de infraestructura d
 \hline
 \end{tabularx}
 \caption{Caracterización de los servicios actuales del GRID}
-\label{tab:servicios}
 \end{table}
 
 \subsection{Servicios esperados}
-
 Los servicios esperados por el GRID se orientan al aprovisionamiento de contenedores a traves de tecnologias VBC. Se espera que los usuarios de distintos dominios ( educación, investigación, extensión ) puedan beneficiarse de este nuevo servicio que se especifica en el cuadro ~\ref{tab:servicios-nuevos}
 
 \begin{table}[H]
@@ -145,7 +143,6 @@ Los servicios esperados por el GRID se orientan al aprovisionamiento de contened
 \hline
 \end{tabularx}
 \caption{Caracterización de los servicios esperados del GRID}
-\label{tab:servicios-nuevos}
 \end{table}
 
 \section{Descripción de la oportunidad}
