--- a/capitulos/glosario.tex
+++ b/capitulos/glosario.tex
@@ -1,5 +1,5 @@
 \ChapterImageStar[cap:glosario]{Glosario}{./images/fondo.png}\label{cap:glosario}
-
+\mbox{}\\
 En este apartado se encuentran términos clave y conceptos relevantes utilizados a lo largo de este proyecto.
 
 \section*{B}
