--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-x\documentclass[12pt]{report}
+\documentclass[12pt]{report}
 \input{config/paquetes.tex}
 \usepackage[absolute,overlay]{textpos}
 \usepackage{babel}
@@ -169,16 +169,16 @@ x\documentclass[12pt]{report}
 \vspace*{\fill}
 \newpage
 
-%\input{indice.tex}
-%\input{resumen.tex}
+\input{indice.tex}
+\input{resumen.tex}
 
-%\input{capitulos/listaFiguras.tex}
-%\input{capitulos/listaTablas.tex}
+\input{capitulos/listaFiguras.tex}
+\input{capitulos/listaTablas.tex}
 
-%\input{capitulos/introduccion.tex}
-%\input{capitulos/glosario.tex} 
-%\input{capitulos/siglas.tex}
-%\input{capitulos/objetivos.tex}
+\input{capitulos/introduccion.tex}
+\input{capitulos/glosario.tex} 
+\input{capitulos/siglas.tex}
+\input{capitulos/objetivos.tex}
 \input{capitulos/justificacion.tex}
 \input{capitulos/metodologia.tex}
 \input{capitulos/marcoConceptual.tex}
@@ -188,15 +188,16 @@ x\documentclass[12pt]{report}
 \input{capitulos/desarrolloMetodologico/caracterizacionGRID.tex}
 \input{capitulos/desarrolloMetodologico/mapeoSMS.tex}
 \input{capitulos/desarrolloMetodologico/caracterizacionVBC.tex}
-%\input{capitulos/benchmarking.tex}
-%\input{capitulos/DAR.tex}
+\input{capitulos/benchmarking.tex}
+\input{capitulos/DAR.tex}
+\input{capitulos/disenio.tex}
 
-%\input{capitulos/cumplimientoObjetivos.tex}
+\input{capitulos/cumplimientoObjetivos.tex}
 
-%\input{capitulos/referencias.tex}
+\input{capitulos/referencias.tex}
 
 
 
-%\input{apendices/apendices.tex}
+\input{apendices/apendices.tex}
 
 \end{document}
