--- a/capitulos/desarrolloMetodologico/caracterizacionVBC.tex
+++ b/capitulos/desarrolloMetodologico/caracterizacionVBC.tex
@@ -56,10 +56,24 @@ Sarus está dirigido a entornos de HPC y computación científica, donde los usu
 
 
 \input{tablas-images/cp3/licencias.tex}
+
+En la tabla~\ref{tab:interfaz-vbc} se puede ver la interfaz de uso por cada tecnología. Como se puede apreciar, la gran mayoría de tecnologías se utilizan a través de una CLI (línea de comandos). Esto, en muchos casos, puede implicar un aumento en la curva de aprendizaje, pero mayor facilidad para gestionar y automatizar las tecnologías una vez que se ha comprendido el uso de su interfaz.
 \input{tablas-images/cp3/interfaz-uso.tex}
+
+En el cuadro~\ref{tab:integracion-cloud-vbc} se puede ver la integración a las distintas plataformas cloud que tiene cada tecnología. Se puede ver que muchas tecnologías tienen integración directa con 3 de los proveedores cloud más famosos, a saber: AWS, GCP y Azure. Algunas tecnologías, por otro lado, solo soportan implementación de nubes privadas, como LXD.
 \input{tablas-images/cp3/integracion-cloud.tex}
+
+\section{Cuadrante Gartner}
+Para visualizar el panorama de las tecnologias de contenerización en cuanto a su relevancia en la industria, se aplicó un cuadrante gartner, el cual mide dos dimensiones, Visión y Ejecución, es decir que tan buena proyeccion puede tener la tecnologia en el futuro y que tan bien se desempeña actualmente en el corto plazo.
+
 \input{tablas-images/cp3/medicion-gartner.tex}
+
+Una vez hecha la tabla anterior, se pueden resumir los resultados en el diagrama~\ref{fig:tabla-cuadrante-gartner}, que representa el cuadrante Gartner. Se pueden ver 4 grandes grupos de tecnologías dependiendo de su nivel de visión y ejecución: Líderes, Retadores, Visionarios, Jugadores de nicho.
 \input{tablas-images/cp3/cuadrante-gartner.tex}
+
+En la tabla~\ref{tab:entornos-ejecucion-vbc} se puede ver los sistemas operativos en los que se ejecutan estas tecnologias, se puede ver que la mayoria de estas estan diseñadas para sistemas linux, seguido de sistemas windows y por ultimo sistemas macOS, en cuyo caso las 2 unicas tecnologias que soportan este SO son ~\textit{Docker} y ~\textit{Podman}.
 \input{tablas-images/cp3/entorno-ejecucion.tex}
+
+En el cuadro~\ref{tab:matriz-dofa} se define una matriz DOFA, especificando las debilidades, oportunidades, fortalezas y amenazas de las tecnologías VBC. Esto permite tener varios aspectos en cuenta a la hora de seleccionar una tecnología o realizar una implementación.
 \input{tablas-images/cp3/matriz-dofa.tex}
 \input{tablas-images/cp3/documentacion.tex}
