--- a/capitulos/listaFiguras.tex
+++ b/capitulos/listaFiguras.tex
@@ -1,6 +1,7 @@
 % portada bonita
 \ChapterImageStar{Índice de figuras}{./images/fondo.png}
 
+\mbox{}\\
 % pegamos la lista sin salto extra
 \begingroup
   \renewcommand{\addcontentsline}[3]{} % no añade entrada
