--- a/tablas-images/cp3/interfaz-uso.tex
+++ b/tablas-images/cp3/interfaz-uso.tex
@@ -1,9 +1,9 @@
- \begin{table}[H]
+\begin{table}[H]
 \centering
 \scriptsize
 \setlength{\tabcolsep}{3pt}
 \renewcommand{\arraystretch}{1.1}
-\begin{tabularx}{\textwidth}{|p{0.2\textwidth}|p{0.75\textwidth}|}
+\begin{tabularx}{\textwidth}{|p{0.18\textwidth}|>{\raggedright\arraybackslash}X|}
 \hline
 \textbf{Tecnología} & \textbf{Interfaz de Uso} \\
 \hline
@@ -13,13 +13,13 @@ Podman & \CLI\ similar a Docker, sin daemon. Opcional Podman Desktop. \\
 \hline
 Udocker & \CLI\ específica para ejecutar contenedores sin privilegios root. \\
 \hline
-Wasm (WebAssembly) & Ejecución través de navegadores web, \API\ de JavaScript. \\
+Wasm  & Ejecución través de navegadores web, \API\ de JavaScript. \\
 \hline
 LXC & \CLI\ mediante comando lxc, sin interfaz gráfica oficial. \\
 \hline
 Containerd & \CLI\ con herramientas como ctr, backend para otras herramientas. \\
 \hline
-LXD & \CLI\ mediante lxd/lxc, con interfaz web LXD Web \UI\ . \\
+LXD & \CLI\ mediante lxd/lxc, con interfaz web LXD Web \UI. \\
 \hline
 Rkt & \CLI\ mediante comandos como rkt run (descontinuado). \\
 \hline
@@ -27,7 +27,7 @@ Singularity & \CLI\ mediante comandos singularity para gestión de contenedores.
 \hline
 runC & \CLI\ mediante comandos runc, runtime bajo Docker y Kubernetes. \\
 \hline
-CRI-O & \CLI\, interactúa con Kubernetes, sin interfaz gráfica dedicada. \\
+CRI-O & \CLI, interactúa con Kubernetes, sin interfaz gráfica dedicada. \\
 \hline
 Hyper-V containers & \CLI\ (PowerShell) o Hyper-V Manager para VMs. \\
 \hline
@@ -39,9 +39,9 @@ Google gVisor & \CLI\ mediante comandos estándar de Docker con seguridad adicio
 \hline
 Kata Containers & \CLI\ mediante kata-runtime, integración con Kubernetes. \\
 \hline
-Firecracker & \CLI\ mediante API RESTful y herramientas firecracker. \\
+Firecracker & \CLI\ mediante \API\ RESTful y herramientas firecracker. \\
 \hline
-Sarus & \CLI\ mediante comando sarus para entornos \HPC\ . \\
+Sarus & \CLI\ mediante comando sarus para entornos \HPC. \\
 \hline
 \end{tabularx}
 \caption{Interfaz de uso de cada VBC}\label{tab:interfaz-vbc}
