Updates from Overleaf

--- a/capitulos/desarrolloMetodologico/mapeoSMS.tex
+++ b/capitulos/desarrolloMetodologico/mapeoSMS.tex
@@ -231,9 +231,9 @@ Como segunda estrategia de búsqueda dentro del SMS, se aplicó la técnica de ~
 
 \subsection{Artículos por año y métricas}
 
-A continuación se presentan las gráficas que resumen los resultados de las estrategias anteriores. En la figura~\ref{fig:diagrama-articulos-ano-metrica} se pueden visualizar las métricas de calidad, separadas por los últimos 3 años y mostrando el promedio en cada métrica de los artículos publicados en esos años. En la figura~\ref{fig:tipos-articulos} se muestra el conteo de artículos por su tipo específico, el cual puede ser uno de 3 opciones: 'Revista', 'Conferencia' o 'Genérico'. Vemos que la mayoría de artículos provienen de revistas. En la figura~\ref{fig:estrategia-busqueda-articulos} se detalla la cantidad de artículos que se extrajo de cada estrategia. Finalmente, en la figura~\ref{fig:diagrama-red-articulos} se puede apreciar un diagrama de red, que segrega por colores los tópicos más relacionados entre sí.
-\input{tablas-images/cp2/estudios.tex}
+A continuación se presentan las gráficas que resumen los resultados de los artículos obtenidos y las estrategias anteriores.\\
 
+\input{tablas-images/cp2/estudios.tex}
 \section{Información de la herramienta}
 
 \noindent
